--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,14 @@
 }
 
 .App-header {
-  background-color: #7D80DA; /* Apply the color to header background */
-  min-height: 100vh;
+  background-color: #7D80DA;
+  min-height: 200px; /* Adjust the min-height to make the header more compact */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: #C6AFB1; /* Apply the color to header text */
+  font-size: calc(10px + 1.5vmin);
+  color: #C6AFB1;
 }
 
 .App-link {
@@ -60,6 +60,22 @@
 .button-spacing {
   margin-right: 20px;
 }
+
+/* If you have an external stylesheet, add the following CSS */
+.priority-filter-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.priority-filter-dropdown {
+  padding: 8px 12px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-left: 10px;
+}
+
 
 /* Add this to your CSS stylesheet */
 .panel {
